@startuml VibeCodium - ER Diagram (SQLite)
title VibeCodium - SQLite Schema

entity "PROJECTS" as proj {
  * id : string <<PK>>
  --
  * name : string
    description : string
  * language : string
  * createdAt : integer
  * updatedAt : integer
}

entity "FILES" as file {
  * id : string <<PK>>
  --
  * projectId : string <<FK>>
  * path : string
  * content : text
  * createdAt : integer
  * updatedAt : integer
}

entity "SNAPSHOTS" as snap {
  * id : string <<PK>>
  --
  * projectId : string <<FK>>
  * name : string
  * files : text (JSON)
  * createdAt : integer
}

entity "SESSIONS" as sess {
  * id : string <<PK>>
  --
  * projectId : string <<FK>>
  * token : string <<unique>>
  * expiresAt : integer
  * createdAt : integer
}

proj ||--o{ file
proj ||--o{ snap
proj ||--o{ sess

@enduml
